--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,12 +30,12 @@ current_scene="res://survivors_game.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://bullet.gd", "res://gun.gd", "res://characters/happy_boo/happy_boo.gd", "res://kill_count_number.gd", "res://level_number.gd", "res://mob.gd", "res://player.gd", "res://characters/slime/slime.gd", "res://survivors_game.gd", "res://timer.gd"]
-selected_script="res://level_number.gd"
+open_scripts=["res://bullet.gd", "res://gun.gd", "res://characters/happy_boo/happy_boo.gd", "res://kill_count_number.gd", "res://level_number.gd", "res://level_up_menu.gd", "res://mob.gd", "res://player.gd", "res://characters/slime/slime.gd", "res://survivors_game.gd", "res://timer.gd"]
+selected_script="res://level_up_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
