--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
-"selection": false,
+"row": 26,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 26,
+"selection_to_column": 11,
+"selection_to_line": 26,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,12 +63,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 19.0,
-"selection": false,
+"row": 4,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 4,
+"selection_to_column": 15,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -87,11 +95,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 53,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
-"scroll_position": 0.0,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,16 +123,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 2,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 68,
+"selection_from_column": 28,
 "selection_from_line": 2,
-"selection_to_column": 0,
-"selection_to_line": 3,
+"selection_to_column": 68,
+"selection_to_line": 2,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,11 +141,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://level_up_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 0.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
